# arxiv2bib

./: .gitignore  README.md  main.py  pyproject.toml
arxiv2bib/: cli.py  core.py  fetch_arxiv.py  fetch_crossref.py
docs/: tasks.md
